Fix compiler warnings and deprecations
Contains a fix in JUnitTestRunner.java to properly call JUnit 3's
suite() method. Might change behavior. Apparently this never worked
right before.